<resources>
    <string name="app_name">chatroom</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="personal_name">姓名</string>
    <string name="personal_account">帐号</string>
    <string name="exit_account">退出登入</string>
    <string name="setting">设置</string>
    <string name="sending">发送</string>
    <string name="message_list">消息列表</string>
    <string name="friend_list">好友列表</string>
    <string name="chat">聊天</string>
    <string name="log_in_accout">登陆</string>
    <string name="register_accout">点击注册</string>
    <string name="no_account">没有帐号？</string>
    <string name="password">密码</string>
    <string name="password_again">确认密码</string>

</resources>
