<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.example.chatroom.registerActivity.RegisterModel" />
        <variable
            name="registerModel"
            type="com.example.chatroom.registerActivity.RegisterModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".registerActivity.RegisterActivity">

        <TextView
            android:id="@+id/register_left"
            android:layout_width="15sp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/register_top"
            android:layout_width="match_parent"
            android:layout_height="23sp" />

        <TextView
            android:layout_below="@id/register_top"
            android:layout_toEndOf="@id/register_left"
            android:id="@+id/register_root_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_name"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/register_name"
            android:layout_below="@id/register_root_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/register_root_account"
            android:layout_toEndOf="@id/register_left"
            android:layout_below="@id/register_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_account"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/register_account"
            android:layout_below="@id/register_root_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/register_root_password"
            android:layout_toEndOf="@id/register_left"
            android:layout_below="@id/register_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/register_password"
            android:layout_below="@id/register_root_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/register_root_password_again"
            android:layout_toEndOf="@id/register_left"
            android:layout_below="@id/register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_again"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/register_password_again"
            android:layout_below="@id/register_root_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/register_botton"
            android:layout_below="@id/register_password_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/register_accout"
            android:onClick="@{()->registerModel.register()}"/>

    </RelativeLayout>
</layout>