<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chatActivity.view.LoginActivity">

    <EditText
        android:id="@+id/li_account"
        android:layout_above="@id/li_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/li_password"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/li_button"
        android:layout_below="@id/li_password"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_accout"
        android:textSize="24sp"/>

    <RelativeLayout
        android:layout_centerHorizontal="true"
        android:layout_below="@id/li_button"
        android:id="@+id/no_account"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/no_account_text"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/rgst_button"
            android:layout_toRightOf="@id/no_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_accout"
            android:textSize="24sp"/>

    </RelativeLayout>

</RelativeLayout>